--- a/섹션3/가장 짧은 문자거리.html
+++ b/섹션3/가장 짧은 문자거리.html
@@ -26,9 +26,19 @@
             }
             var str ="teachermode";
             var a = "e";
-
-            console.log(solution(str, a));
-
+            console.log(solution(str,a));
+            // var answer = [];
+            // var p = 1000;
+            // for (var s of str){
+            //     if(s===a) p=0, answer.push(p);
+            //     else p++, answer.push(p);
+            // }            
+            // var q = 1000;
+            // for (var i=str.length-1; i>=0; i--){
+            //     if(str[i]==a) q=0;
+            //     else q++, answer[i]=Math.min(answer[i], q);
+            // }
+            // console.log(answer);
         </script>
     </body>
 </html>
