--- a/섹션4/졸업 선물.html
+++ b/섹션4/졸업 선물.html
@@ -6,22 +6,15 @@
     <body>
         <script>
             function solution(arr, t){
-              var max=index=0;
+              var max=-1231232;
+              arr.sort((a, b)=>(a[0]+a[1])-(b[0]+b[1]));
               for (var i=0; i<arr.length; i++){
-                if (arr[i][0]>max) max=arr[i][0], index=i;
-              }
-              arr[index][0]=arr[index][0]/2;
-
-
-              var cnt=total=0;
-              var max=-1231232
-              for (var i=0; i<arr.length; i++){
-                cnt=total=0;
-                total+=arr[i][0]+arr[i][1];
-                cnt++
-                for(var j=i+1; j<arr.length; j++){
-                  if(total<=t) total+=arr[j][0]+arr[j][1], cnt++;
-                  if(total==t) max=Math.max(max, cnt) ;
+                var money= arr[i][0]/2+arr[i][1];
+                var cnt=1;
+                for(var j=0; j<arr.length; j++){
+                  if(i!=j && money<=t) money+=arr[j][0]+arr[j][1], cnt++;
+                  if(money>t) break;
+                  if(money==t) max=Math.max(max, cnt) ;
                 }
               }
               return max;
