--- a/섹션4/k번째 큰 수.html
+++ b/섹션4/k번째 큰 수.html
@@ -15,7 +15,17 @@
             let n =10;
             let th=3;
             console.log(solution(arr, th, n));
-
+            const arrs= new Set(arr.sort((a,b)=>(b-a)));
+            const result = [...arrs];
+            var answer =[];
+            for(var i=0; i<arr.length; i++){
+              for (var j=i+1; j<arr.length; j++){
+                for (var k=j+1; k<arr.length; k++){
+                  answer.push(result[i]+result[j]+result[k]);
+                }
+              }
+            }
+            console.log(answer.length);
             
         </script>
     </body>
