--- a/섹션7/삽입 정렬.html
+++ b/섹션7/삽입 정렬.html
@@ -6,8 +6,16 @@
     <body>
         <script>
             function solution(arr){
+              var tmp;
+              for(var i=1; i<arr.length; i++){
+                tmp=arr[i]
+                for(var j=i-1; j>=0; j--){
+                  if(tmp<arr[j]) [arr[j+1],arr[j]]=[arr[j], arr[j+1]];
+                }
+              }
+              return arr;
             }
-            let arr=[];
+            let arr=[11, 7, 5, 6, 10, 9];
             console.log(solution(arr));
         </script>
     </body>
