--- a/섹션7/카카오 캐시 문제 변형.html
+++ b/섹션7/카카오 캐시 문제 변형.html
@@ -25,6 +25,24 @@
             }
             let arr=[1, 2, 3, 2, 6, 2, 3, 5, 7];
             console.log(solution(arr, 5));
+            var size=5;
+
+            let answer=[];
+                arr.forEach(x => {
+                    let pos=-1;
+                    for(let i=0; i<size; i++) if(x===answer[i]) pos=i;
+                    if(pos===-1){
+                       answer.unshift(x);
+                       if(answer.length>size) answer.pop();
+                    }
+                    else{
+                       answer.splice(pos, 1);
+                       answer.unshift(x);
+                    } 
+                });
+                console.log(answer);
+            
+
         </script>
     </body>
 </html>
