--- a/섹션8/부분집합구하기.html
+++ b/섹션8/부분집합구하기.html
@@ -5,28 +5,27 @@
     </head>
     <body>
         <script>
-            function solution(n){
-                let answer=[];
-                let ch=Array.from({length:n+1}, ()=>0);
-                function DFS(L){
-                    if(L===n+1){
-                        let tmp="";
-                        for(let i=1; i<=n; i++){
-                            if(ch[i]===1) tmp+=(i+" ");
-                        }
-                        if(tmp.length>0) answer.push(tmp.trim());
-                    }
-                    else{
-                        ch[L]=1;
-                        DFS(L+1);
-                        ch[L]=0;
-                        DFS(L+1);
-                    }
+           function solution(n){
+              var answer=[];
+              var ch=Array.from({length:n+1}, ()=>0);
+              function DFS(L){
+                if(L==n+1){
+                  var tmp='';
+                  for(var i=1; i<=n; i++){
+                    if(ch[i]===1) tmp+=(i+" ");
+                  }
+                  if(tmp.length>0) answer.push(tmp.trim());
                 }
-                DFS(1);
-                return answer;
+                else{
+                  ch[L]=1;
+                  DFS(L+1);
+                  ch[L]=0;
+                  DFS(L+1);
+                }
+              }
+              DFS(1);
+              return answer;
             }
-
             console.log(solution(3));
         </script>
     </body>
