--- a/섹션8/바둑이 승차.html
+++ b/섹션8/바둑이 승차.html
@@ -5,21 +5,22 @@
     </head>
     <body>
         <script>
-            function solution(c, arr){
-                let answer=Number.MIN_SAFE_INTEGER;
-                let n=arr.length;
-                function DFS(L, sum){
-                    if(sum>c) return;
-                    if(L===n){
-                        answer=Math.max(answer, sum);
-                    }
-                    else{
-                        DFS(L+1, sum+arr[L]);
-                        DFS(L+1, sum);
-                    }                  
+            function solution(a, arr){
+              var max=0;
+              function DFS(L,sum){
+                if(L==5){
+                  if(sum>max && sum<259){
+                    max=sum;
+                    return;
+                  }
                 }
-                DFS(0, 0);
-                return answer;
+                else{
+                  DFS(L+1, sum+arr[L]);
+                  DFS(L+1, sum);
+                }
+              }
+              DFS(0,0);
+              return max;
             }
 
             let arr=[81, 58, 42, 33, 61];
