--- a/섹션8/부분집합구하기.html
+++ b/섹션8/부분집합구하기.html
@@ -14,7 +14,7 @@
                   for(var i=1; i<=n; i++){
                     if(ch[i]===1) tmp+=(i+" ");
                   }
-                  if(tmp.length>0) answer.push(tmp.trim());
+                  if(tmp.length>0) answer.push(tmp);
                 }
                 else{
                   ch[L]=1;
