--- a/섹션8/중복순열 구하기.html
+++ b/섹션8/중복순열 구하기.html
@@ -8,20 +8,18 @@
             function solution(n, m){
               var answer=[];
               var cnt=0;
-              function DFS(L,k){
-                if(k==4 || L==4){
-                  cnt+=3;
-                  return;
-                }
-                if(L==4) return;
+              var tmp=Array.from({length:m}, ()=>0);
+              function DFS(L){
+                if(L===m) answer.push(tmp.slice()), cnt+=1;
                 else{
-                  console.log(L,k)
-                  DFS(L, k+1);
-                  DFS(L+1,1);
+                  for(var i=1; i<=3; i++){
+                    tmp[L]=i;
+                    DFS(L+1);
+                  }
                 }
               }
-              DFS(1,1);
-              return cnt;
+              DFS(0);
+              return cnt, answer;
             }
 
             console.log(solution(3, 2));
