--- a/섹션2/등수구하기.html
+++ b/섹션2/등수구하기.html
@@ -5,17 +5,18 @@
     </head>
     <body>
         <script>
-            function solution(arr){
-              let n=arr.length;
-              let answer=Array.from({length:n}, ()=>1);
-              for (var i=0; i<arr.length; i++){
-                for (var j=0; j<arr.length; i++){
-                  if(arr[i]>arr[j]) answer[i]++;
-                }
-              }
-              return answer
+            function solution(arr){  
+                let n=arr.length;
+                let answer=Array.from({length:n}, ()=>1);
+                for(let i=0; i<n; i++){
+                    for(let j=0; j<n; j++){
+                        if(arr[j]>arr[i]) answer[i]++;
+                    }
+                }             
+                return answer;
             }
-            var arr =[87, 89, 92, 100, 76];
+
+            let arr=[87, 89, 92, 100, 76];
             console.log(solution(arr));
         </script>
     </body>
