--- a/프로그래머스 LV2/괄호 변환.html
+++ b/프로그래머스 LV2/괄호 변환.html
@@ -4,7 +4,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script>function solution(p) {
+  <script>
+  function solution(p) {
     let answer = "";
     let left = 0 // 현재 왼쪽 괄호 개수
       let right = 0; // 현재 오른쪽 괄호 개수
